Added exchange token for oauth users
